# piano-visualizer

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
scripts/: deploy.py  env.sh
src/: functions.rs  main.rs  structs.rs
src/api/: mod.rs
src/leds/: functions.rs
src/midi/: functions.rs  mod.rs  rtp.rs
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  http.ts
